--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -6,18 +6,38 @@ body{
     font-family: sans-serif;
     width: 100%;
 }
-header{
-    /* height: 80px; */
-    /* background-color: blue; */
+.top-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px 0 260px;
+    background-color: #e9ebfa;
 }
+
+.logo img{
+    width: 60px;
+    height: 60px;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.logo h3{
+    color: #F0513A;
+    width: 50px;
+}
+
 aside{
     padding: 20px;
     float: left;
     width: 200px;
     height: 100%;
-    background-color: rgb(0, 0, 128);
+    background-color: #171D64;
     color: white;
     z-index: 1;
+    position: fixed;
 }
 
 li{
@@ -26,7 +46,7 @@ li{
 li a{
     text-decoration: none;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     display: block;
     padding-left: 10px;
     padding-bottom: 15px;
@@ -49,7 +69,7 @@ li a:active{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 50px;
+    gap: 80px;
 }
 
 .buttom-nav{
@@ -67,14 +87,25 @@ li a:active{
 }
 
 .buttom-profile img{
-    width: 60px;
-    height: 60px;
-    border-radius: 560px;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+.logout a{
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+}
+
+.logout{
+    display: flex;
+    gap: 10px;
 }
 
 
 main{
-    background-color: rgb(242, 242, 253);
+    background-color: rgb(247, 247, 253);
     height: 620px;
 }
 
@@ -106,8 +137,13 @@ input{
     height: 20px;
     width: 250px;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none;
+    background-color: rgb(250, 249, 249);
+}
+
+input:focus{
+    outline: none;
 }
 
 /* GLOBAL CSS */
@@ -115,49 +151,73 @@ input{
 .global-css{
     margin-left: 260px;
     margin-right: 20px;
-
+    margin-top: 15px;
 }
 
-header{
+.right-section{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
+    flex-direction: column;
+    gap: 15px;
 }
 
-section{
+.quick-action{
+    background-color: white;
+    padding: 15px 20px 15px 20px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-radius: 10px;
+
+}
+.quick-action-card{
+    display: flex;
+    gap: 20px;
+}
+button{
+    padding: 15px 30px 15px 30px;
+    border: none;
+    color:#171D64;
+    background-color: #b4ace4;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.upcoming-schedule{
+    width: 440px;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-
-.main-p p{
-    font-size: 24px;
-}
-
 .top{
     display: flex;
     justify-content: space-between;
+    padding: 0 15px 0 15px;
 }
 
-.bus-availability{
+.table{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
 }
 
-.row-card-flex{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.row-card{
+.heading-row{
     display: flex;
     justify-content: space-between;
-    background-color: white;
-    border-radius: 10px;
-    padding: 10px;
 }
+.body-row{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: gainsboro;
+    border-radius: 5px;
+}
+
+
 
 
 
