--- a/Bus-shedule/scheduling.css
+++ b/Bus-shedule/scheduling.css
@@ -52,6 +52,7 @@ li a{
     padding-left: 10px;
     padding-bottom: 15px;
     padding-top: 15px;
+    margin-bottom: 10px;
     display: flex;
     gap: 20px;
 }
@@ -70,7 +71,7 @@ li a:active{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 80px;
+    gap: 50px;
 }
 .logout a{
     text-decoration: none;
@@ -196,7 +197,7 @@ button {
 .flex{
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 00px;
 }
 
 .schedule-list {
@@ -237,7 +238,7 @@ button {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.2);
 }
 
 .modal-content {
@@ -291,5 +292,17 @@ button {
 .flatpickr-calendar {
     box-shadow: none;
     border: 1px solid #ddd;
+}
+
+td i{
+    margin-left: 20px;
+}
+
+#modal2-content{
+    display: none;
+    width: 200px;
+    height: 400px;
+    background-color: white;
+    padding: 10px;
 }
 
