--- a/Bus tracking/tracking.css
+++ b/Bus tracking/tracking.css
@@ -61,7 +61,7 @@ li a:hover{
     border-radius: 10px;
 }
 
-li a:active{
+.tracking{
     background-color: rgb(20, 66, 151);
     border-radius: 10px;
 }
