--- a/Bus-shedule/scheduling.css
+++ b/Bus-shedule/scheduling.css
@@ -62,7 +62,7 @@ li a:hover{
     border-radius: 10px;
 }
 
-li a:active{
+.schedule{
     background-color: rgb(20, 66, 151);
     border-radius: 10px;
 }
@@ -171,6 +171,11 @@ button {
     font-size: 16px;
     font-weight: bold;
     border-radius: 10px;
+}
+
+button:hover {
+    background-color: #171D64;
+    color: white;
 }
 
 .filters {
